# rustation

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  GPUI_MIGRATION_PROGRESS.md  GPUI_TEST_SIGBUS_ISSUE.md  ISSUES.md  PHASE_6_COMPLETE_SUMMARY.md  PHASE_6_PROGRESS.md  README.md  ROADMAP.md  TODOS.md  index.html  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  vite.config.ts  wdio.conf.ts
crates/rscli/: Cargo.toml
crates/rscli-core/: Cargo.toml
crates/rscli-core/src/: errors.rs  lib.rs  paths.rs
crates/rscli-core/src/git/: commit.rs  mod.rs  security.rs  worktree.rs
crates/rscli-core/src/mcp/: mod.rs
crates/rscli-core/src/service/: mod.rs
crates/rscli-core/src/test/: mod.rs
crates/rscli-tui/: Cargo.toml
crates/rscli-tui/src/: lib.rs
crates/rscli/src/: cli.rs  lib.rs  main.rs  session.rs  settings.rs
crates/rscli/src/commands/: build.rs  doctor.rs  mcp.rs  mod.rs  service.rs  spec.rs  test.rs  worktree.rs
crates/rscli/src/runners/: bash.rs  cargo.rs  mod.rs  python.rs
crates/rscli/src/tui/: app.rs  claude_stream.rs  event.rs  mod.rs  protocol.rs
crates/rscli/src/tui/views/: command_runner.rs  dashboard.rs  mod.rs  settings.rs  spec.rs  worktree.rs
crates/rscli/src/tui/widgets/: input_dialog.rs  mod.rs  option_picker.rs  text_input.rs
crates/rscli/src/ui/: table.rs
crates/rstn/: Cargo.toml
crates/rstn-core/: Cargo.toml
crates/rstn-core/prompts/: implement.md  review.md
crates/rstn-core/src/: lib.rs
crates/rstn-core/src/clarify/: integrator.rs  mod.rs  question.rs  session.rs
crates/rstn-core/src/git/: commit.rs  mod.rs  security.rs  worktree.rs
crates/rstn-core/src/mcp/: mod.rs
crates/rstn-core/src/plan/: mod.rs  writer.rs
crates/rstn-core/src/prompts/: builtin.rs  mod.rs
crates/rstn-core/src/reducer/: tests.rs
crates/rstn-core/src/specify/: mod.rs  name_generator.rs  number_allocator.rs
crates/rstn/src/: cli.rs  lib.rs  logging.rs  main.rs  session.rs  session_manager.rs  settings.rs  state.rs  version.rs
crates/rstn/src/commands/: doctor.rs  mcp.rs  prompt.rs  service.rs  session.rs  spec.rs  test.rs  worktree.rs
crates/rstn/src/domain/: errors.rs  paths.rs
crates/rstn/src/domain/git/: commit.rs  security.rs
crates/rstn/src/domain/mcp/: mod.rs
crates/rstn/src/domain/plan/: context.rs  generator.rs
crates/rstn/src/domain/prompts/: mod.rs
crates/rstn/src/domain/specify/: mod.rs  number_allocator.rs  spec_generator.rs
crates/rstn/src/runners/: cargo.rs
crates/rstn/src/tui/: app.rs  claude_stream.rs  event.rs  mcp_server.rs  mod.rs
crates/rstn/src/tui/logging/: buffer.rs  entry.rs  file_tracker.rs  mod.rs
crates/rstn/src/tui/state/: builders.rs  workflow.rs
crates/rstn/src/tui/views/: command_runner.rs  dashboard.rs  mod.rs  session_output.rs  settings.rs  spec.rs  worktree.rs
crates/rstn/src/tui/widgets/: input_dialog.rs  option_picker.rs  text_input.rs
crates/rstn/src/ui/: table.rs
crates/rstn/tests/: cli_state_tests.rs  commit_review_test.rs  gpui_without_macro_test.rs  logging_test.rs  mcp_server_test.rs  minimal_gpui_test.rs  pure_rust_test.rs  sdd_workflow_test.rs  tui_tests.rs
crates/rstn/tests/e2e_tests/: mod.rs  sdd_workflow_e2e.rs
crates/rstn/tests/tui/: logging_tests.rs  mod.rs
crates/rstn/tests/ui/: dockers_view_test.rs  mod.rs  tasks_view_test.rs
crates/rush/: CLI.md  Cargo.toml  KNOWN_ISSUES.md  README.md  TEST_COVERAGE.md  build.rs
crates/rush/benches/: pipeline_bench.rs
crates/rush/src/: lib.rs  main.rs
crates/rush/src/completion/: command.rs  flag.rs  mod.rs  path.rs
crates/rush/src/config/: defaults.rs
crates/rush/src/executor/: alias.rs  aliases.rs  arrays.rs  case_statement.rs  command_group.rs  conditional.rs  execute.rs  expansion.rs  for_loop.rs  function.rs  glob.rs  job.rs  loop_control.rs  mod.rs  parser.rs  pipeline.rs  subshell.rs  substitution.rs  test_expr.rs  tilde.rs  variables.rs  while_loop.rs
crates/rush/src/executor/arithmetic/: parser.rs
crates/rush/src/executor/builtins/: alias.rs  bg.rs  bracket.rs  cd.rs  echo.rs  exit.rs  fg.rs  (+11 more)
crates/rush/src/repl/: highlight.rs  lexer.rs  mod.rs  prompt.rs  suggest.rs
crates/rush/tests/: contract_tests.rs  feature_test.rs  integration_test.rs  unit_tests.rs
crates/rush/tests/contract/: pipe_spec_validation.rs
crates/rush/tests/integration/: alias_tests.rs  autosuggestions_tests.rs  case_statements_globbing_tests.rs  completion_tests.rs  conditionals_pipes_tests.rs  conditionals_redirections_tests.rs  conditionals_tests.rs  edge_cases_tests.rs  for_loops_pipes_tests.rs  for_loops_redirections_tests.rs  nested_structures_tests.rs  pipe_tests.rs  posix_compliance_tests.rs  while_loops_expansions_tests.rs  while_loops_redirections_tests.rs
crates/rush/tests/unit/: parser_conditional.rs  pipe_parser_tests.rs  suggest_tests.rs
legacy-crates/rstn/: Cargo.toml  build.rs
legacy-crates/rstn/src/: claude_discovery.rs  cli.rs  lib.rs  logging.rs  main.rs  session.rs  settings.rs
legacy-crates/rstn/src/commands/: build.rs  mcp.rs  mod.rs  service.rs  session.rs  spec.rs  test.rs  worktree.rs
legacy-crates/rstn/src/domain/: paths.rs
legacy-crates/rstn/src/runners/: bash.rs  cargo.rs
legacy-crates/rstn/src/tui/: claude_stream.rs  event.rs  mcp_server.rs  mini_dialog.rs  mod.rs  paste.rs  protocol.rs
legacy-crates/rstn/src/ui/: mod.rs  table.rs
legacy-crates/rstn/tests/: app_state_test.rs  cli_state_tests.rs  commit_review_test.rs  e2e.rs  logging_test.rs  mcp_server_test.rs  prompt_command_test.rs  sdd_workflow_test.rs  session_persistence_test.rs  worktree_state_test.rs  worktree_transitions_test.rs
legacy-crates/rstn/tests/e2e_tests/: mod.rs  sdd_workflow_e2e.rs
legacy-crates/rstn/tests/tui/: logging_tests.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/docker/: manager.rs  mod.rs  services.rs
src-tauri/src/mcp/: mod.rs  server.rs  types.rs
src-tauri/src/state/: mod.rs
(+807 files in other folders)
