[workspace]
resolver = "2"
members = ["src-tauri", "packages/core"]
# Note: rstn/ is also available as Python (see rstn/pyproject.toml)
# Legacy Rust TUI code in legacy-crates/ for reference

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Common dependencies that can be shared across all workspace members
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Inter-crate dependencies removed - all code now in rstn crate
