[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rstn"
version = "0.1.0"
description = "Rustation Development Toolkit - Workflow-driven TUI for Claude Code integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Chris Cheng", email = "chris.cheng@shopee.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    # TUI Framework
    "textual>=0.84.0",

    # State Management & Serialization
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",

    # Claude & MCP Integration
    "anthropic>=0.39.0",
    "mcp>=1.0.0",

    # MCP HTTP Server
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Linting & Type Checking
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-pyyaml",

    # TUI Testing
    "textual-dev>=1.0.0",
]

[project.scripts]
rstn = "rstn.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rstn*"]

# Ruff configuration (replaces flake8, isort, black)
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["rstn", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "SIM105",  # Use contextlib.suppress - we prefer explicit try/except for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B017",  # Allow pytest.raises(Exception) - intentional for testing immutability
    "B007",  # Allow unused loop variables in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_unused_ignores = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=rstn",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["rstn"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
