[package]
name = "rstn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rustation development toolkit - CLI for developing rush shell"
repository = "https://github.com/chrischeng-c4/rustation"
keywords = ["cli", "development", "testing", "shell"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rstn"
path = "src/main.rs"

[lib]
name = "rstn"
path = "src/lib.rs"

[dependencies]
# Inter-crate dependencies
rstn-core = { workspace = true }
rstn-tui = { workspace = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { workspace = true, features = ["full", "process"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Configuration parsing
toml = "0.8"

# TUI framework (temporary - will be provided by rscli-tui after migration)
ratatui = "0.29"
crossterm = "0.28"
arboard = "3.4"

# Terminal output
colored = "2.1"
comfy-table = "7.1"

# System utilities
which = "8.0"
glob = "0.3"
dirs = "5.0"

# Async trait support
async-trait = "0.1"

# Unix system calls (for exec restart)
libc = "0.2"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
flate2 = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
# Temporary files for testing
tempfile = "3.8"
