[package]
name = "rstn"
version = "0.1.0"
edition = "2021"
description = "rustation - A developer workbench powered by GPUI"
license = "MIT"

[lib]
name = "rstn"
path = "src/lib.rs"

[[bin]]
name = "rstn"
path = "src/main.rs"

[dependencies]
# GPUI framework (from Zed repository)
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# Core library
rstn-core = { path = "../rstn-core" }
rstn-ui = { path = "../rstn-ui" }
rstn-views = { path = "../rstn-views" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# System directories
dirs = "5.0"

[dev-dependencies]
# GPUI test support (requires Metal/Xcode)
# NOTE: test-support feature causes SIGBUS errors during compilation
# Temporarily disabled until issue is resolved
# gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", features = ["test-support"] }

# Temporary directories for testing
tempfile = "3.8"

[features]
# Enable GPUI test support for UI integration tests
# Note: Tests require Metal shader compiler (Xcode installation)
test-support = []
