[package]
name = "rush"
version = "0.1.0"
edition = "2021"
authors = ["rush contributors"]
description = "A modern, fast, fish-like shell written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chrischeng-c4/rust-station"
keywords = ["shell", "cli", "terminal", "repl"]
categories = ["command-line-utilities"]

[[bin]]
name = "rush"
path = "src/main.rs"

[lib]
name = "rush"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# REPL and line editing
reedline = "0.35"
nu-ansi-term = "0.50"  # For syntax highlighting colors

# Terminal control
crossterm = "0.28"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Configuration parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Directory helpers
dirs = "5.0"

# Lazy static initialization (T046)
once_cell = "1.19"

# Unix system calls (job control, signals)
nix = { version = "0.29", features = ["process", "signal", "term"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-appender = "0.2"  # For file logging

[dev-dependencies]
# Integration testing
rexpect = "0.5"

# Performance benchmarking
criterion = "0.5"

# Temporary files for testing
tempfile = "3.8"

# Benchmarks will be added in Phase 10 (Polish)
