[package]
name = "rstn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rustation development toolkit - CLI for developing rush shell"
repository = "https://github.com/chrischeng-c4/rustation"
keywords = ["cli", "development", "testing", "shell"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rstn"
path = "src/main.rs"

[lib]
name = "rstn"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { workspace = true, features = ["full", "process"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Configuration parsing
toml = "0.8"

# TUI framework (temporary - will be provided by rscli-tui after migration)
ratatui = "0.29"
crossterm = "0.28"
arboard = "3.4"

# Terminal output
colored = "2.1"
comfy-table = "7.1"

# System utilities
which = "8.0"
glob = "0.3"
dirs = "5.0"
regex = "1.10"
base64 = "0.21"
similar = "2.4"  # Text diffing for edit previews

# Async trait support
async-trait = "0.1"

# MCP Server (Model Context Protocol) - Simple HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Unix system calls (for exec restart)
libc = "0.2"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
once_cell = "1.19"  # Global state for CLI/TUI MCP integration

# Session management
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
# Temporary files for testing
tempfile = "3.8"
# HTTP client for MCP server integration tests
reqwest = { version = "0.12", features = ["stream"] }
